--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="icon" href="/assets/favicon.png">
   <title>Widgets</title>
-  <link rel="stylesheet" href="reset.css">
-  <link rel="stylesheet" href="style.css">
+  <!-- <link rel="stylesheet" href="./css/reset.css"> -->
+  <link rel="stylesheet" href="./css/style.css">
+  <script src="bundle.js"></script>
 </head>
 <body>
   <div id="root"><marquee>REACT IS BROKEN PLS SEND HALP</marquee></div>
